Fix style so that IGE Login button is not covered by footer

--- a/ingrid-portal-apps/src/webapp/profiles/bkg_advmis/ingrid-portal/decorations/layout/ingrid/css/bkg/medium.css
+++ b/ingrid-portal-apps/src/webapp/profiles/bkg_advmis/ingrid-portal/decorations/layout/ingrid/css/bkg/medium.css
@@ -292,7 +292,7 @@
   color: #333
  }
  #navFunctionsWrapper {
-  margin: 3em auto 2em
+  margin: 1em auto 2em
  }
  .searchresult h2 {
   padding-right: 60px
